--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
 <router-outlet></router-outlet>
+
+
+<!-- Crear un formulario de empleados, (id(autogenera), name,lastName,email,startDate)
+se debe validar cada campo que sea requerido con su mensaje
+
+se van un menu que redirija a list y a new
+
+van a colocar el componente del formulario en las paginas new y edit -->
