--- a/src/app/page/details/details.component.html
+++ b/src/app/page/details/details.component.html
@@ -1,1 +1,24 @@
-<p>details works!</p>
+<div class="row">
+  <div class="12">
+    <h4>Datos Online</h4>
+    <div class="row">
+      <div class="col-12 col-md-3 text-primary"><b>Nombre</b></div>
+      <div class="col-12 col-md-9"> {{ employeeOnline.name }}</div>
+    </div>
+    <div class="row">
+      <div class="col-12 col-md-3 text-primary"><b>Apellido</b></div>
+      <div class="col-12 col-md-9"> {{ employeeOnline.lastName }}</div>
+    </div>
+    <div class="row">
+      <div class="col-12 col-md-3 text-primary"><b>Email</b></div>
+      <div class="col-12 col-md-9"> {{ employeeOnline.email }}</div>
+    </div>
+    <div class="row">
+      <div class="col-12 col-md-3 text-primary"><b>Ingreso</b></div>
+      <div class="col-12 col-md-9"> {{ employeeOnline.startDate }}</div>
+    </div>
+  </div>
+  <div class="col-12 pt-4">
+    <button class="btn btn-info" [routerLink]="['/list']">Regresar</button>
+  </div>
+</div>
