--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,13 @@
 </div>
 
 <!-- 
-  se debe validar cada campo que sea requerido con su mensaje 
+  Actividad que al dar click en el boton editar me redireccione a lña pagina editar
+  que la informacion del empleado que se selecciono se mnuestre en el formulario (formGroup.setValue(employee))
+
+  tienen que tener en cuenta que el componente del formulario recibe un @input que se llame edit(true, false);
+
+  el componente del formulario tiene que hacer juego con el edit
+
+  edit = true, el boton dira editar
+  edit = false, el boton dira guardar
 -->
