enviar empleado al componente del formualrio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 </div>
 
 <!-- 
-  Actividad que al dar click en el boton editar me redireccione a lña pagina editar
+  Actividad que al dar click en el boton editar me redireccione a la pagina editar
   que la informacion del empleado que se selecciono se mnuestre en el formulario (formGroup.setValue(employee))
 
   tienen que tener en cuenta que el componente del formulario recibe un @input que se llame edit(true, false);
