--- a/src/app/page/list/list.component.html
+++ b/src/app/page/list/list.component.html
@@ -15,7 +15,7 @@
       <td>{{ employee.email }}</td>
       <td>{{ employee.startDate }}</td>
       <td>
-        <button class="btn btn-primary btn-circle btn-sm espacio"> Editar</button>
+        <button class="btn btn-primary btn-circle btn-sm espacio" (click)="edit(employee)"> Editar</button>
         <button class="btn btn-warning btn-circle btn-sm espacio" (click)="view(employee)"> Ver más</button>
         <button class="btn btn-danger btn-circle btn-sm espacio"> Eliminar</button>
       </td>
