--- a/src/app/page/edit/edit.component.html
+++ b/src/app/page/edit/edit.component.html
@@ -1,1 +1,1 @@
-<app-employees-form [employeeData]="employee"></app-employees-form>
+<app-employees-form [employeeData]="employee" [edit]="true" (employee)="edit($event)"></app-employees-form>
