--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div style="min-height: 100vh; padding-bottom: 20px;">
+<div style="min-height: 100vh; padding-bottom: 20px;" *blockUI="'block-target'">
   <app-navbar></app-navbar>
   <div class="container mt-5">
     <h1>CRUD</h1>
